# aer407-enceladus-simulation

./: .env.example  README.md  agi.stk12-12.6.0-py3-none-any.whl  pyproject.toml  requirements.json  test.txt  trajectory.ipynb
EnceladusSampleReturn3/: CoverageDefinition1.cv  DSN.cn  DSS_14_Goldstone_STDN_DS14.f  DSS_14_Goldstone_STDN_DS14.f3  DSS_33_Tidbinbilla.f3  DSS_41_Island_Lagoon.f3  DSS_44_Honeysuckle_Creek.f3  Earth.plc3  EnceladusSampleReturn3 STK ScenarioWB.wsp  EnceladusSampleReturn3 STK ScenarioWB.wsptb  EnceladusSampleReturn3.sc  EnceladusSampleReturn3.sc3  EnceladusSampleReturn3.sca  EnceladusSampleReturn3.terc  EnceladusSampleReturn3TimelinePrefs.xml  FigureOfMerit1.fm  FigureOfMerit1.fmv  Geyser_1.ac  Geyser_1.ac3  Geyser_11.plc  Geyser_14.plc  Geyser_15.plc  Geyser_19.plc  Geyser_2.plc  Geyser_20.plc  Geyser_22.plc  Geyser_23.plc  Geyser_25.plc  Geyser_26.plc  Geyser_29.plc  Geyser_3.plc  Geyser_32.plc  Geyser_33.plc  Geyser_35.plc  Geyser_36.plc  Geyser_39.plc  Geyser_40.plc  Geyser_41.plc  Geyser_42.plc  Geyser_43.plc  (+40 more)
LinkBudgetScenario/: Lander.plc  Lander.plc3  LinkBudgetScenario STK ScenarioWB.wsp  LinkBudgetScenario STK ScenarioWB.wsptb  LinkBudgetScenario.sc  LinkBudgetScenario.sc3  LinkBudgetScenario.sca  LinkBudgetScenario.wind.flight  LinkBudgetScenarioTimelinePrefs.xml  Motor.sn  Orbiter.sa  Orbiter.sa3  Receiver.r  Receiver2.r  Satellite1.sa  Satellite1.sa3  Transmitter.x
OrbitSelectionScenario/: OrbitSelectionScenario STK ScenarioWB.wsp  OrbitSelectionScenario STK ScenarioWB.wsptb  OrbitSelectionScenario.mtline  OrbitSelectionScenario.sc  (+13 more)
(+105 files in other folders)
