[tool.poetry]
name = "aer407-enceladus-simulation"
version = "0.1.0"
description = ""
authors = ["David Maranto <D.Maranto1122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
agi-stk12 = { path = "agi.stk12-12.6.0-py3-none-any.whl" }
pandas = "^2.1.1"
astropy = "^5.3.4"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
