[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["David Maranto <D.Maranto1122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
agi-stk12 = { path = "agi.stk12-12.6.0-py3-none-any.whl" }
astropy = "^5.3.4"
ipykernel = "^6.25.2"
plotly = "^5.17.0"
nbformat = "^5.9.2"
pytest = "^7.4.2"
python-decouple = "^3.8"
notion-client = "^2.0.0"
tqdm = "^4.66.1"
pydantic = "^2.5.1"
openai = "^1.3.0"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
jupyter-black = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
